# server

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.web  Dockerfile.worker  Makefile  README.md  SERVER_SETUP.md  alembic.ini  app.json  config.py  cron.py  deploy.py  deploy.sh  dev.sh  docker-compose.base.yml  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.service.yml  docker-compose.yml  docker.py  ecosystem.config.js  heroku.yml  log_config.yml  logging.cfg  pyproject.toml  requirements.txt  server.py  update.sh  worker.py
.circleci/: config.yml
.github/workflows/: server.yml
app/: package-lock.json  package.json
app/src/: App.tsx  config.ts  index.tsx  store.ts  theme.ts
config/: gunicorn.py  logging.py  logging.yml  telegraf.conf  worker.supervisord.conf
config/dashboards/: dashboard.json  logs.json  metrics.json
dockerfiles/: Dockerfile  Dockerfile.dev  Dockerfile.dev.web  Dockerfile.dev.worker  Dockerfile.server  Dockerfile.web  Dockerfile.worker
dripdrop/: __init__.py  app.py  conftest.py  database.py  dependencies.py  logger.py  models.py  redis.py  responses.py  rq.py  scheduler.py  settings.py  tasker.py  tasks.py  utils.py  worker.py
dripdrop/admin/: __init__.py  app.py  dependencies.py  models.py  test_app.py  tests.py  utils.py
dripdrop/authentication/: __init__.py  app.py  dependencies.py  models.py  responses.py  utils.py
dripdrop/base/: dependencies.py  models.py  responses.py  test.py
dripdrop/models/: base.py  database.py  register.py
dripdrop/music/: __init__.py  app.py  job.py  jobs.py  models.py  requests.py  responses.py  tasks.py  utils.py
dripdrop/services/: __init__.py  audio.py  audio_tag.py  boto3.py  cron.py  database.py  ffmpeg.py  google_api.py  http_client.py  image_downloader.py  invidious.py  redis.py  redis_client.py  rq.py  rq_client.py  s3.py  scheduler.py  scraper.py  sendgrid_client.py  tag_extractor.py  tasker.py  temp_files.py  templates.py  websocket_channel.py  websocket_handler.py  youtube_downloader.py  ytdlp.py
dripdrop/templates/: base.jinja  reset.jinja  verify.jinja
dripdrop/youtube/: __init__.py  app.py  channel.py  channels.py  dependencies.py  models.py  requests.py  responses.py  subscriptions.py  tasks.py  utils.py  (+2 more)
migrations/: env.py
scripts/: deploy.sh  docker.sh  migrate.sh  run.sh  server.dev.sh  server.sh  server_deploy.sh  web.dev.sh  web.sh  worker.sh
server/: __init__.py  app.py  auth.py  config.py  cron.py  database.py  db.py  decorators.py  dependencies.py  logger.py  logging.json  logging.py  middleware.py  models.py  music_downloader.py  queue.py  redis.py  request_client.py  rq.py  tasks.py  worker.py
setup/: setup.sh
tests/: conftest.py
(+365 files in other folders)
