[tool.poetry]
name = "dripdrop"
version = "0.1.0"
description = ""
authors = ["Mohamed Raffik"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
black = "^24.0.0"
alembic = "^1.8.1"
fastapi = {version = "0.100.0", extras = ["all"]}
croniter = "^1.3.7"
boto3 = "^1.24.73"
redis = "^4.3.4"
rq = "^1.11.0"
yt-dlp = {extras = ["curl-cffi", "default"], version = "^2024.7.9"}
mutagen = "^1.45.1"
asgiref = "^3.5.2"
flake8 = "^5.0.4"
psycopg2-binary = "^2.9.3"
beautifulsoup4 = "^4.11.1"
watchfiles = "^0.17.0"
sqlalchemy = "^2.0.2"
asyncpg = "^0.27.0"
pyjwt = {extras = ["crypto"], version = "^2.6.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
aiosqlite = "^0.17.0"
httpx = "^0.23.3"
fake-useragent = "^1.1.3"
sendgrid = "^6.10.0"
apscheduler = "^3.10.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
