[project]
authors = [
    {name = "Mohamed Raffik"},
]
requires-python = "<4.0,>=3.12"
dependencies = [
    "alembic<2.0.0,>=1.8.1",
    "fastapi[all]>=0.100.0",
    "croniter>=5.0.0",
    "boto3<2.0.0,>=1.24.73",
    "redis<5.3.0,>=5.2.1",
    "rq<2.0.0,>=1.11.0",
    "yt-dlp[curl-cffi,default]<2025.2.0,>=2025.1.12",
    "mutagen<2.0.0,>=1.45.1",
    "flake8>=7.0.0",
    "psycopg2-binary<3.0.0,>=2.9.3",
    "beautifulsoup4<5.0.0,>=4.11.1",
    "watchfiles>=0.24.0",
    "sqlalchemy[asyncio]>=2.0.2,<3.0.0",
    "asyncpg<1.0.0,>=0.30.0",
    "pyjwt[crypto]<3.0.0,>=2.6.0",
    "passlib[bcrypt]<2.0.0,>=1.7.4",
    "aiosqlite<1.0.0,>=0.20.0",
    "httpx<1.0.0,>=0.27.0",
    "fake-useragent<2.1.0,>=2.0.3",
    "sendgrid<7.0.0,>=6.10.0",
    "apscheduler<4.0.0,>=3.10.1",
    "ruff>=0.9.7",
]
name = "dripdrop"
version = "0.1.0"
description = ""
